# kernel-security-vulns

./: .gitignore  .gitmodules  Cargo.toml  HOWTO  README  justfile
.github/workflows/: sync.yml
cve/: README  allocated  linux.uuid  schema  vulnerability.txt
cve/published/2019/: CVE-2019-25160.dyad  CVE-2019-25160.json  CVE-2019-25160.mbox  CVE-2019-25160.sha1  CVE-2019-25161.sha1  CVE-2019-25162.dyad  CVE-2019-25162.json  CVE-2019-25162.mbox  CVE-2019-25162.sha1
cve/published/2020/: CVE-2020-36775.dyad  CVE-2020-36775.json  CVE-2020-36775.mbox  CVE-2020-36775.sha1  CVE-2020-36775.vulnerable  CVE-2020-36776.dyad  CVE-2020-36776.json  CVE-2020-36776.mbox  CVE-2020-36776.sha1  CVE-2020-36777.dyad  CVE-2020-36777.json  CVE-2020-36777.mbox  CVE-2020-36777.sha1  (+57 more)
cve/review/: 6.7.proposed  mbox.6.7  mbox.6.7.1  mbox.6.7.1.cve  mbox.6.7.2  mbox.6.7.2.cve  mbox.6.7.3  mbox.6.7.3.cve  mbox.6.7.4  mbox.6.7.4.cve  mbox.6.7.5  mbox.6.7.5.cve  mbox.6.7.cve
form_letters/: bot_responses  this_is_not_for_security_bugs
git_hooks/: sendemail-validate
gsd/: README  gsd-request-2021-05-26  gsd-request-2021-06-03.review  gsd-request-2021-07-31  gsd-request-2021-07-31.review  gsd-request-2021-10-18.review  gsd-request-2021-11-13.review  gsd-request-2021-11-27  gsd-request-2021-12-15  gsd-request-2021-12-22  gsd-request-2021-12-29  gsd-request-2022-01-06  gsd-request-2022-02-15.review  gsd-request-2022-03-15.review  gsd-request-2022-03-23.review  gsd-request-2022-04-24.review  gsd-request-2022-06-21  gsd-request-2022-07-30.review  gsd-request-2022-09-15  gsd-request-2022-09-26.review  gsd-request-2022-10-04  gsd-request-2022-12-05  gsd-request-2023-01-10.review  gsd-request-2023-01-16.review  gsd-request-2023-02-26  gsd-request-2023-02-26.review  gsd-request-2023-04-02.review  gsd-request-2023-08-06  gsd-request-2023-09-29  gsd-request-2023-09-29.review  gsd-request-2023-10-23.review  gsd-request-2023-12-03  gsd-review.00  gsd-review.01  gsd-review.02  gsd-review.03  gsd-review.04  gsd-review.05  gsd-review.06  gsd-review.07  (+40 more)
gsd/processed/: gsd-request-2021-05-26.review  gsd-request-2021-06-03  gsd-request-2021-06-15.review  gsd-request-2021-06-26.review  gsd-request-2021-07-31.review  gsd-request-2021-10-18  gsd-request-2021-10-27.review  gsd-request-2021-11-13  gsd-request-2021-11-13.review  gsd-request-2021-11-27.review  gsd-request-2021-12-15.review  gsd-request-2021-12-22.review  gsd-request-2021-12-29.review  gsd-request-2022-01-06.review  gsd-request-2022-02-15  gsd-request-2022-02-25.review  gsd-request-2022-04-24.review  gsd-request-2022-06-21.review  gsd-request-2022-09-15.review  gsd-request-2022-10-04.review  gsd-request-2022-11-14.review  gsd-request-2022-12-05.review  gsd-request-2023-01-27.review  gsd-request-2023-02-12.review  gsd-request-2023-03-15.review  gsd-request-2023-04-27.review  gsd-request-2023-06-07.review  gsd-request-2023-08-06.review  gsd-request-2023-08-26.review  gsd-request-2023-10-23  gsd-request-2023-12-03.review  gsd-review.02  gsd-review.03  gsd-review.04  gsd-review.09  gsd-review.12  gsd-review.13  gsd-review.15  gsd-review.20  gsd-review.21  (+7 more)
scripts/: CVE-2024-0000.json  bippy  bippy.sh  check_history  cve_classifier.py  cve_create  cve_create.sh  cve_create_batch  cve_create~HEAD  cve_mbox_grep_ignore  cve_publish_json  cve_publish_mbox  cve_reject  cve_return  cve_review  cve_search  cve_stats  cve_stats.sh  cve_update  cve_update.sh  cvelistV5_check  dyad  dyad.sh  find_reverts  mbox-to-review  not_fixes  not_reverts  score.sh  strak  summary  tags  update_dyad  verhaal_fetch  voting_results
scripts/gregkh/: allocate_cves  check_cvelistV5  check_history  to_week.pl  week
scripts/tests/: test-bippy.sh  test-dyad.sh  test-voting_results.sh
tmp/: CVE-2024-0053.json  CVE-2024-0053.json.orig  NOTES  README  test.json
tools/: Cargo.toml
tools/bippy/: .gitignore
tools/bippy/src/: lib.rs  main.rs  policy.rs
tools/bippy/src/commands/: json.rs  mbox.rs  mod.rs
tools/bippy/src/models/: cli.rs  cve.rs  dyad.rs  errors.rs  mod.rs
tools/bippy/src/utils/: dyad.rs  file.rs  git.rs  mod.rs  text.rs  version.rs
tools/bippy/tests/: bippy.rs  consistency.rs
tools/cve_classifier/src/: classifier.rs  collector.rs  main.rs  utils.rs
tools/cve_utils/: .gitignore
tools/cve_utils/src/: dyad.rs  kernel.rs  lib.rs  verhaal.rs  version_utils.rs
tools/cve_utils/src/cvss/: formula.rs  metrics.rs  mod.rs
tools/cve_utils/tests/: cve_search.rs  score.rs
tools/cvss/src/: json_writer.rs  main.rs  output.rs
tools/cvss/src/scoring/: formula.rs  mod.rs  vector.rs
tools/cvss/tests/: cvss.rs  formula.rs  json_writer.rs  vector.rs
tools/dyad/: Cargo.toml
tools/dyad/src/: kernel.rs  main.rs
tools/dyad/src/cli/: mod.rs
tools/dyad/src/kernel/: kernel_pairs.rs  mod.rs  sha_processing.rs  vulnerability.rs
tools/dyad/src/state/: mod.rs
tools/dyad/tests/: dyad.rs  integration.rs
tools/strak/src/: main.rs
tools/strak/tests/: strak.rs
tools/voting_results/: .gitignore
tools/voting_results/src/: main.rs
tools/voting_results/tests/: voting_results.rs
(+52529 files in other folders)
