
[package]
name = "vuln_utils"
version = "1.2.0"
authors = ["Greg Kroah-Hartman <gregkh@linuxfoundation.org>", "Sasha Levin <sashal@kernel.org>" ]
license = "GPL-2.0"
edition = "2024"

[features]
default = []
cuda = ["commit-classifier/cuda", "cve_classifier"]
cve_classifier = ["commit-classifier", "shellexpand", "sha2", "tokio"]

[dependencies]
env_logger = "0.11.6"
gumdrop = { version = "0.8.1" }
log = "0.4.26"
rusqlite = "0.38.0"
owo-colors = { version = "4", features = ["supports-colors"] }
git2 = "0.20"
grep = "0.4"
# Voting results dependencies
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
regex = "1.9"
lazy_static = "1.4"
glob = "0.3"
tempfile = "3.8"
# Bippy dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = "0.4"
# CVE Utils dependencies
walkdir = "2.4"
num_cpus = "1.16"
dialoguer = "0.12"
rayon = "1.8"
indicatif = "0.18"
rand = "0.9"
libc = "0.2"
# CVE Classifier dependencies
commit-classifier = { git = "https://git.sr.ht/~sashal/commit-classifier", default-features = false, optional = true }
shellexpand = { version = "3.1", optional = true }
sha2 = { version = "0.10", optional = true }
tokio = { version = "1.34", features = ["full"], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "dyad"
path = "dyad/src/main.rs"

[[bin]]
name = "voting_results"
path = "voting_results/src/main.rs"

[[bin]]
name = "bippy"
path = "bippy/src/main.rs"

[[bin]]
name = "strak"
path = "strak/src/main.rs"

# CVE Utils binaries
[[bin]]
name = "cve_search"
path = "cve_utils/src/bin/cve_search.rs"

[[bin]]
name = "cve_reject"
path = "cve_utils/src/bin/cve_reject.rs"

[[bin]]
name = "cve_update"
path = "cve_utils/src/bin/cve_update.rs"

[[bin]]
name = "cve_publish"
path = "cve_utils/src/bin/cve_publish.rs"

[[bin]]
name = "cve_create"
path = "cve_utils/src/bin/cve_create.rs"

[[bin]]
name = "cve_review"
path = "cve_utils/src/bin/cve_review.rs"

[[bin]]
name = "update_dyad"
path = "cve_utils/src/bin/update_dyad.rs"

[[bin]]
name = "score"
path = "cve_utils/src/bin/score.rs"

[[bin]]
name = "cve_stats"
path = "cve_utils/src/bin/cve_stats.rs"

[[bin]]
name = "cve_classifier"
path = "cve_classifier/src/main.rs"
required-features = ["cve_classifier"]

[[test]]
name = "dyad"
path = "dyad/tests/dyad.rs"

[[test]]
name = "integration"
path = "dyad/tests/integration.rs"
harness = true
required-features = []

[[test]]
name = "strak"
path = "strak/tests/strak.rs"

[[test]]
name = "bippy"
path = "bippy/tests/bippy.rs"

[[test]]
name = "voting_results"
path = "voting_results/tests/voting_results.rs"

[lib]
name = "cve_utils"
path = "cve_utils/src/lib.rs"
