[package]
name = "dyad"
version = "0.1.0"
authors = ["Greg Kroah-Hartman <gregkh@linuxfoundation.org>", "Sasha Levin <sashal@kernel.org>" ]
license = "GPL-2.0"
edition = "2024"

[dependencies]
env_logger = "0.11.6"
gumdrop = { version = "0.8.1" }
log = "0.4.26"
rusqlite = "0.34.0"
colored = "3"
git2 = "0.20"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
